[feat/S14P21A506-185] 캘린더 커리큘럼 줄기 렌더링 방식 변경 (startDate/endDate → prevNodeDate/nextNodeDate)